--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio error culpa sapiente architecto magni laborum
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, amet reiciendis. Aut sed voluptates nostrum consequuntur distinctio fugiat alias fugit laborum, magnam tempore, vitae nemo quidem! Libero recusandae magni delectus maiores quos at perferendis, sed eius fugit praesentium consequuntur ducimus ad corrupti iste id officia quas eligendi maxime a ipsam.
 </p>
 
 <body>
