New updated Text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <p>
    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad hic nostrum rerum nobis dolore modi odit, laudantium magnam saepe, fugiat voluptatibus exercitationem eos tempore, quos voluptates ipsa. Corrupti, rerum hic?</li>
+   <li>Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
 </p>
 
 <body>
