New updated main text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, amet reiciendis. Aut sed voluptates nostrum consequuntur distinctio fugiat alias fugit laborum, magna
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, quam.
 </p>
 
 <body>
