--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <p>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, maxime eos. Quia cum dolor qui ut voluptatibus odio, minima quos dicta. Ad quidem doloremque delectus adipisci. Cupiditate nostrum voluptatibus nulla.
+Lorem Lorem    
 
 
 </p>
+
 
 <p>
 
